exports[`test trailing_comma.js 1`] = `
"f = ([s=1]) => 1;
function f([s=1]){};
f = function([s=1]){};
class c {a([s=1]){}}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
f = (
  [
    s = 1
  ],
) =>
  1;
function f(
  [
    s = 1
  ],
) {
}
f = function(
  [
    s = 1
  ],
) {
};
class c {
  a(
    [
      s = 1
    ],
  ) {
  }
}
"
`;

exports[`test trailing_comma.js 2`] = `
"f = ([s=1]) => 1;
function f([s=1]){};
f = function([s=1]){};
class c {a([s=1]){}}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
f = (
  [
    s = 1,
  ],
) =>
  1;
function f(
  [
    s = 1,
  ],
) {
}
f = function(
  [
    s = 1,
  ],
) {
};
class c {
  a(
    [
      s = 1,
    ],
  ) {
  }
}
"
`;
